# espfactory

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-dry-run.yml  publish.yml
src/: bundle.rs  efuse.rs  flash.rs  input.rs  lib.rs  loader.rs  logger.rs  main.rs  model.rs  monitor.rs  task.rs  uploader.rs  utils.rs  view.rs
src/loader/: dir.rs  file.rs  http.rs  s3.rs
src/ui/: input.rs  view.rs
src/uploader/: dir.rs  http.rs  s3.rs
src/utils/: futures.rs  linewrite.rs
