[package]
name = "espfactory"
version = "0.1.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "esp32"]
description = "A utility for flashing/provisioning ESP32 PCBs at the factory premises"
repository = "https://github.com/ivmarkov/espfactory"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.82"

[[bin]]
name = "espfactory"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["directories", "clap"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
embassy-sync = { version = "0.5", features = ["std"] }
embassy-time = { version = "0.3", features = ["std", "generic-queue"] }
embassy-futures = "0.1"
critical-section = { version = "1", features = ["std"] }
scopeguard = "1"
futures-lite = "2"
zip = { version = "2", default-features = false, features = ["deflate", "deflate-flate2"] }
anyhow = "1"
esp-idf-part = "0.5"
espflash = { version = "3", features = ["cli"] }
#esptools = { git = "http://github.com/ivmarkov/esptools" }
serialport = "4.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
env_logger = { version = "0.11", optional = true }
directories = { version = "3", optional = true }
reqwest = "0.12"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
clap = { version = "4", optional = true, features = ["derive"] }
