[package]
name = "espfactory"
version = "0.1.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "esp32"]
description = "A utility for flashing/provisioning ESP32 PCBs at the factory premises"
repository = "https://github.com/ivmarkov/espfactory"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.82"

[profile.release]
debug = true # So that we get meaningful stacktraces even in release

[[bin]]
name = "espfactory"
required-features = ["bin"]

[patch.crates-io]
# For disabling the `libudev` dependency
espflash = { git = "https://github.com/esp-rs/espflash" }

[features]
default = ["bin", "s3"]
bin = ["directories", "clap", "async-compat"]
libudev = ["espflash/libudev", "serialport/libudev"]
s3 = ["aws-config", "aws-sdk-s3"]

[dependencies]
crossterm = "0.28"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
embassy-sync = { version = "0.5", features = ["std"] }
embassy-time = { version = "0.3", features = ["std", "generic-queue"] }
embassy-futures = "0.1"
critical-section = { version = "1", features = ["std"] }
scopeguard = "1"
futures-lite = "2"
zip = { version = "2", default-features = false, features = ["deflate", "deflate-flate2"] }
anyhow = "1"
esp-idf-part = "0.5"
espflash = { version = "3.2", default-features = false, features = ["cli"] }
esptools = { version = "0.1", default-features = false, features = ["espefuse", "espsecure"] }
serialport = { version = "4.6", default-features = false }
log = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
csv = "1.3"
bitflags = "2"
env_logger = "0.11"
directories = { version = "3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "blocking"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.65", optional = true }
tempfile = "3"
async-compat = { version = "0.2", optional = true } # Because the AWS SDK uses tokio
clap = { version = "4", optional = true, features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
